@@ -1057,7 +1057,7 @@ INSERT INTO site
 	('lookuppar2','0'),
 	('delaytime', '2'),
 	('addpar2', '0'),
-	('sqlpatch','115');
+	('sqlpatch','116');
 
 
 DROP TABLE IF EXISTS logging;
@@ -1385,7 +1385,6 @@ DROP TABLE IF EXISTS nzbs;
 CREATE TABLE nzbs (
 	message_id varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '',
 	groupname varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
-	articlenumber varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	subject varchar(1000) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	collectionhash varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	filesize bigint(20) unsigned NOT NULL DEFAULT '0',
