@@ -1,5 +1,6 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
+08292013 -> jonnyboy -> removed unneeded column from nzbs table
 08292013 -> kevin       August 23 to 29:
                         Convert to php database objects.
                         Almost full support for postgresql (still needs work).
